# vivianite

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  editor.cpp  editor.h  field.cpp  field.h  field_renderer.cpp  field_renderer.h  main.cpp  shared_prefs.h  test  vivianite  window.cpp  window.h
appimage/: AppRun  vivianite.desktop
assets/fonts/: credit.txt
assets/icon/: icon.rc
extra/icon/: icon.res
fonts/: credit.txt
include/: vivianite.h
include/glad/: glad.h
src/: editor.cpp  editor.h  field.cpp  field.h  field_renderer.cpp  field_renderer.h  main.cpp  raylib_type.cpp  raylib_type.h  shared_prefs.h  window.cpp  window.h
src/dl/: dllfail.cpp  dlload.cpp
src/elements/abstract/: renderer.h  tab.h
src/globals/: colors.cpp  colors.h  resources.cpp  resources.h
src/include/: glad.c
src/input/: keys.cpp  keys.h
src/modules/builtin/buffer/: Makefile  buffer.cpp
src/modules/builtin/split/: Makefile  split.cpp
src/modules/builtin/startscreen/: .gitignore  Makefile  startscreen.cpp
src/modules/code/: editor.cpp  editor.h  field.cpp  field.h  field_renderer.cpp  field_renderer.h  module.txt
src/modules/quick-render/: Makefile  render.cpp
src/modules/startscreen/: module.txt  startscreen.cpp  startscreen.h
src/render/: frame.cpp  video.cpp
src/res/: font_atlas.c  font_atlas.h  fonts.cpp  fonts.h  res.cpp  res.h
src/structure/: compositor.cpp  compositor.h  ui_loop.cpp  ui_loop.h
src/structure/type/: raylib_type.h  shared_prefs.h
src/system/: vivianite.h
src/tiling/: compositor.cpp  compositor.h  dllfail.cpp  dlload.cpp  tile.cpp  tile.h
